--- a/index.html
+++ b/index.html
@@ -33,8 +33,27 @@
         <i class="far fa-user"></i>
       </div>
     </header>
+    <!---->
 
     <!--header section ends here-->
+    <!--login form-->
+    <div class="login-form-container">
+      <span class="fas fa-times" id="close-login-form"></span>
+
+      <form action="">
+        <h3>user login</h3>
+        <input type="email" placeholder="email" class="box" />
+        <input type="password" placeholder="password" class="box" />
+        <p>forget your password <a href="#">click here</a></p>
+        <input type="submit" value="login-now" class="btn" />
+        <p>or login with</p>
+        <div class="buttons">
+          <a href="#" class="btn">google</a>
+          <a href="#" class="btn">facebook</a>
+        </div>
+        <p>don't have an account <a href="#">create one</a></p>
+      </form>
+    </div>
 
     <!--custom js link-->
     <script src="app.js"></script>
