--- a/index.html
+++ b/index.html
@@ -55,6 +55,58 @@
       </form>
     </div>
 
+    <!--home section starts-->
+    <section class="home" id="home">
+      <h1 class="home-parallax" data-speed="-2">find your car</h1>
+      <img class="home-parallax" data-speed="5" src="./jomi.jpg" alt="" />
+      <a href="#" class="btn home-parallax" data-speed="7">explore cars</a>
+    </section>
+    <!--home section ends-->
+
+    <!--icon section starts here-->
+    <section class="icons-container">
+      <div class="icons">
+        <i class="fas fa-home"></i>
+        <div class="content">
+          <h3>150+</h3>
+          <p>branches</p>
+        </div>
+      </div>
+
+      <div class="icons">
+        <i class="fas fa-car"></i>
+        <div class="content">
+          <h3>4770+</h3>
+          <p>cars sold</p>
+        </div>
+      </div>
+
+      <div class="icons">
+        <i class="fas fa-users"></i>
+        <div class="content">
+          <h3>590+</h3>
+          <p>happy clients</p>
+        </div>
+      </div>
+
+      <div class="icons">
+        <i class="fas fa-home"></i>
+        <div class="content">
+          <h3>890+</h3>
+          <p>new cars</p>
+        </div>
+      </div>
+    </section>
+
+    <!--icon section ends here-->
+
+    <!--motor section starts here-->
+    <section class="vehicles" id="vehicles">
+      <h1 class="heading">popular <span>vehicles</span></h1>
+    </section>
+
+    <!--motor section ends here-->
+
     <!--custom js link-->
     <script src="app.js"></script>
   </body>
