few changes in jaavascript application

--- a/index.html
+++ b/index.html
@@ -103,6 +103,105 @@
     <!--motor section starts here-->
     <section class="vehicles" id="vehicles">
       <h1 class="heading">popular <span>vehicles</span></h1>
+      <div class="vehicles-slider">
+        <div class="wrapper">
+          <div class="box">
+            <img src="./logol.png" alt="" />
+            <div class="content">
+              <h3>new model</h3>
+              <div class="price"><span>price</span>$65000/-</div>
+              <p>
+                new
+                <span class="fas fa-circle"></span>2021
+                <span class="fas fa-circle"></span>automatic
+                <span class="fas fa-circle"></span>petrol
+                <span class="fas fa-circle"></span>183mph
+              </p>
+              <a href="#" class="btn"> check out </a>
+            </div>
+          </div>
+
+          <div class="box">
+            <img src="./logol.png" alt="" />
+            <div class="content">
+              <h3>new model</h3>
+              <div class="price"><span>price</span>$65000/-</div>
+              <p>
+                new
+                <span class="fas fa-circle"></span>2021
+                <span class="fas fa-circle"></span>automatic
+                <span class="fas fa-circle"></span>petrol
+                <span class="fas fa-circle"></span>183mph
+              </p>
+              <a href="#" class="btn"> check out </a>
+            </div>
+          </div>
+
+          <div class="box">
+            <img src="./logol.png" alt="" />
+            <div class="content">
+              <h3>new model</h3>
+              <div class="price"><span>price</span>$65000/-</div>
+              <p>
+                new
+                <span class="fas fa-circle"></span>2021
+                <span class="fas fa-circle"></span>automatic
+                <span class="fas fa-circle"></span>petrol
+                <span class="fas fa-circle"></span>183mph
+              </p>
+              <a href="#" class="btn"> check out </a>
+            </div>
+          </div>
+
+          <div class="box">
+            <img src="./logol.png" alt="" />
+            <div class="content">
+              <h3>new model</h3>
+              <div class="price"><span>price</span>$65000/-</div>
+              <p>
+                new
+                <span class="fas fa-circle"></span>2021
+                <span class="fas fa-circle"></span>automatic
+                <span class="fas fa-circle"></span>petrol
+                <span class="fas fa-circle"></span>183mph
+              </p>
+              <a href="#" class="btn"> check out </a>
+            </div>
+          </div>
+
+          <div class="box">
+            <img src="./logol.png" alt="" />
+            <div class="content">
+              <h3>new model</h3>
+              <div class="price"><span>price</span>$65000/-</div>
+              <p>
+                new
+                <span class="fas fa-circle"></span>2021
+                <span class="fas fa-circle"></span>automatic
+                <span class="fas fa-circle"></span>petrol
+                <span class="fas fa-circle"></span>183mph
+              </p>
+              <a href="#" class="btn"> check out </a>
+            </div>
+          </div>
+
+          <div class="box">
+            <img src="./logol.png" alt="" />
+            <div class="content">
+              <h3>new model</h3>
+              <div class="price"><span>price</span>$65000/-</div>
+              <p>
+                new
+                <span class="fas fa-circle"></span>2021
+                <span class="fas fa-circle"></span>automatic
+                <span class="fas fa-circle"></span>petrol
+                <span class="fas fa-circle"></span>183mph
+              </p>
+              <a href="#" class="btn"> check out </a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!--motor section ends here-->
